--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html, body {
 	height: 120px;
 	line-height: 120px;
 	text-align: center;
-	background-color: #ffffff;
+	background-color: #000000;
 }
 
 .header img {
@@ -258,4 +258,16 @@ div.option-menu {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
+}
+
+#under {
+  display: none;
+  text-align: center;
+  align-items: center;
+}
+
+div#under > label {
+  display: inline-block;
+  position: relative;
+  bottom: 12px;
 }
