--- a/css/style.css
+++ b/css/style.css
@@ -320,3 +320,12 @@ div#under > label {
     text-shadow: 0 1px 0 #C04131;
     text-decoration: none;
 }
+
+div#preloaded-images {
+  position: absolute;
+  overflow: hidden;
+  left: -9999px; 
+  top: -9999px;
+  height: 1px;
+  width: 1px;
+}
