--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
 html, body {
-	 width: 100%;
-	 height: 100%;
 	 margin:0;
 	 text-align: center;
 	 position: relative;
@@ -30,10 +28,12 @@ html, body {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 120px;
-	line-height: 120px;
+	height: 157px;
+	line-height: 157px;
 	text-align: center;
 	background-color: #000000;
+  min-width: 650px;
+  overflow: hidden;
 }
 
 .header img {
@@ -57,6 +57,7 @@ html, body {
 	padding-top: 180px;
 	max-width: 1200px;
 	width: 100%;
+  min-width: 650px;
 	height: 100%;
 }
 
@@ -246,6 +247,7 @@ input:checked + .slider:before {
 /* Rounded sliders */
 .slider.round {
   border-radius: 34px;
+  z-index: 1;
 }
 
 .slider.round:before {
@@ -265,6 +267,7 @@ input[type="number"] {
 div.menu-open{
   border-top-right-radius: 0%       !important;
   border-bottom-right-radius: 0%    !important;
+  z-index: 10 !important; 
 }
 
 div.option-menu {
@@ -297,6 +300,7 @@ div.changelog-menu {
 
 #menu{
   display: none;
+  z-index: 10000 !important;
 }
 
 #changelog{
